<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Resume</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="edit">EditProfile</string>
    <string name="images">ViewImages</string>
    <string name="profile">Profile</string>
    <string name="name">Name</string>
    <string name="nick">Nickname</string>
    <string name="code">Code</string>
    <string name="sub">Sub</string>
    <string name="tel">Tel</string>
    <string name="email">Email</string>
    <string name="buu">Buu</string>
    <string name="name1">NAME1</string>
    <string name="nickname1">NICKNAME1</string>
    <string name="code1">CODE1</string>
    <string name="sub1">SUB1</string>
    <string name="tel1">TEL1</string>
    <string name="edit1">EDIT1</string>
    <string name="buu1">BUU1</string>
    <string name="insert">Insert</string>

</resources>
