<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/Bisque"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Fi" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="154dp"
            android:layout_height="124dp"
            android:src="@drawable/bat" />
    </LinearLayout>

    <TextView
        android:id="@+id/k1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/linearLayout1"
        android:layout_marginLeft="18dp"
        android:layout_toRightOf="@+id/linearLayout1"
        android:text="TextView"
        android:textColor="@color/blue" />

    <Button
        android:id="@+id/ed"
        android:layout_width="141dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/k1"
        android:layout_toRightOf="@+id/linearLayout1"
        android:text="@string/edit" />

    <Button
        android:id="@+id/ima"
        android:layout_width="136dp"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/ed"
        android:layout_below="@+id/ed"
        android:text="@string/images" />

    <TextView
        android:id="@+id/t2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/t1"
        android:layout_below="@+id/t1"
        android:layout_marginTop="14dp"
        android:text="@string/nick"
        android:textColor="@color/DeepPink" />

    <TextView
        android:id="@+id/t3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/t2"
        android:layout_below="@+id/t2"
        android:layout_marginTop="16dp"
        android:text="@string/code"
        android:textColor="@color/DeepPink" />

    <TextView
        android:id="@+id/t4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/t3"
        android:layout_below="@+id/t3"
        android:layout_marginTop="21dp"
        android:text="@string/sub"
        android:textColor="@color/DeepPink" />

    <TextView
        android:id="@+id/t5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/t4"
        android:layout_below="@+id/t4"
        android:layout_marginTop="19dp"
        android:text="@string/tel"
        android:textColor="@color/DeepPink" />

    <TextView
        android:id="@+id/t6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/t5"
        android:layout_below="@+id/t5"
        android:layout_marginTop="22dp"
        android:text="@string/email"
        android:textColor="@color/DeepPink" />

    <TextView
        android:id="@+id/t7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/t6"
        android:layout_below="@+id/t6"
        android:layout_marginTop="20dp"
        android:text="@string/buu"
        android:textColor="@color/DeepPink" />

    <TextView
        android:id="@+id/t1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/k1"
        android:layout_below="@+id/linearLayout1"
        android:layout_marginTop="45dp"
        android:text="@string/name"
        android:textColor="@color/DeepPink" />

    <TextView
        android:id="@+id/n1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/t1"
        android:layout_alignBottom="@+id/t1"
        android:layout_alignLeft="@+id/linearLayout1"
        android:text="@string/name1"
        android:textColor="@color/Crimson" />

    <TextView
        android:id="@+id/n2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/t2"
        android:layout_alignBottom="@+id/t2"
        android:layout_alignLeft="@+id/n1"
        android:text="@string/nickname1"
        android:textColor="@color/Crimson" />

    <TextView
        android:id="@+id/n3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/t4"
        android:layout_alignLeft="@+id/n2"
        android:text="@string/code1"
        android:textColor="@color/Crimson" />

    <TextView
        android:id="@+id/n4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/t4"
        android:layout_alignBottom="@+id/t4"
        android:layout_alignLeft="@+id/n3"
        android:text="@string/sub1"
        android:textColor="@color/Crimson" />

    <TextView
        android:id="@+id/n5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/t5"
        android:layout_alignBottom="@+id/t5"
        android:layout_alignLeft="@+id/n4"
        android:text="@string/tel1"
        android:textColor="@color/Crimson" />

    <TextView
        android:id="@+id/n6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/t6"
        android:layout_alignBottom="@+id/t6"
        android:layout_alignLeft="@+id/n5"
        android:text="@string/edit1"
        android:textColor="@color/Crimson" />

    <TextView
        android:id="@+id/n7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/t7"
        android:layout_alignBottom="@+id/t7"
        android:layout_alignLeft="@+id/n6"
        android:text="@string/buu1"
        android:textColor="@color/Crimson" />

</RelativeLayout>